# joy_workspace

./: .rosinstall
barrett_control/barrett_control/: package.xml
barrett_control/barrett_hw/: CMakeLists.txt  CMakeLists.txt~  package.xml~
barrett_control/barrett_hw/launch/: test_wam.launch  test_wam.launch~
barrett_control/barrett_hw/msg/: arm_cartesian_state.msg~  joint_state.msg
barrett_control/barrett_hw/src/: robot_states_publisher.cpp  wam_server_copy.cpp
barrett_control/barrett_model/: urdf.rviz
barrett_control/barrett_model/launch/: xacrodisplay.launch  xacrodisplay.launch~
barrett_control/barrett_model/models/: components.urdf.xacro  wam_top.urdf.xacro
barrett_control/lwr_description/model/: kuka_lwr.urdf.xacro
barrett_model/: urdf.rviz
barrett_model/launch/: xacrodisplay.launch  xacrodisplay.launch~
biotac_driver/biotac_logger/scripts/: biotac_json_logger.py
biotac_driver/biotac_sensors/: CMakeLists.txt  CMakeLists.txt~
biotac_driver/biotac_sensors/src/: biotac_pub.cpp~
dmp/dmp/: package.xml~
dmp/dmp_behaviors/demonstrations/: dmp_rollout_newgoal.bag  joint_space_dmp.bag
dmp/dmp_behaviors/launch/: arm_learning_from_demonstration_behavior.launch  arm_learning_from_demonstration_behavior.launch~
dmp/dynamic_movement_primitive/: CMakeLists.txt  CMakeLists.txt~
dmp/dynamic_movement_primitive_utilities/: package.xml~
dmp/dynamic_movement_primitive_utilities/src/: trajectory_utilities.cpp
dmp/recorder/: CMakeLists.txt  CMakeLists.txt~  package.xml~  setup.py  setup.py~
dmp/recorder/scripts/: BTAndJSRecorder.py  BTAndJSRecorder.py~  Json_Extracter.py  Server_Client.py
dmp/task_recorder/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
dmp/task_recorder/config/: task_recorder_manager.yaml~
dmp/task_recorder/include/: task_recorder.h
dmp/task_recorder/scripts/: datasample_bag_file_parser.py  datasample_bag_file_reader.py
dmp/task_recorder/srv/: StopRecording.srv
dmp/task_recorder/test/: test_task_recorder_node.cpp
dmp/task_related/: CMakeLists.txt  CMakeLists.txt~  package.xml~
dmp/task_related/launch/: wam.launch  wam.launch~
dmpbbo/: CMakeLists.txt  CMakeLists.txt~  package.xml
dmpbbo/dmpbbo/: CMakeLists.txt
kinect_utils/kinect_bhand_calib/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  setup.py
kinect_utils/kinect_utils/: CMakeLists.txt  package.xml  package.xml~
kinect_utils/markov_segm/: CMakeLists.txt  CMakeLists.txt~  package.xml~
kinect_utils/markov_segm _backup/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
kinect_utils/markov_segm _backup/img/: 1840_paris_crop.png_segmented  test1.png_segmented  test2.png_segmented  test3.png_segmented
kinect_utils/markov_segm _backup/include/: config.h  config.h~  convert.h  convert.h~  cost.h  simulated_annealing.h
kinect_utils/markov_segm _backup/src/: config.cpp  config.cpp~  cost.cpp  markov_segm_node.cpp  random.cpp  simulated_annealing.cpp
kinect_utils/vision_tracker/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
kinect_utils/vision_tracker/include/: Object.h  Object.h~
kinect_utils/vision_tracker/src/: Object.cpp  Object.cpp~  color_tracker_node.cpp  color_tracker_node.cpp~
kinect_utils/vision_tracker/srv/: WriteToDisk.srv
ops_wbc/ops_wbc/: package.xml
ops_wbc/ops_wbc_gazebo_interface/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ops_wbc/ops_wbc_gazebo_interface/include/gazebo_interface/: exception.hpp  force_sensor.hpp  gazebo_interface.hpp  torque_sensor.hpp
ops_wbc/ops_wbc_gazebo_interface/src/: force_sensor.cpp  gazebo_interface.cpp  torque_sensor.cpp
ops_wbc/ops_wbc_robot/: CMakeLists.txt  CMakeLists.txt~  package.xml
ops_wbc/ops_wbc_robot/include/ops_wbc_robot/robot/: link.hpp  manipulator.hpp  math.hpp  parser.hpp  robot.hpp  tf_publisher.hpp
ops_wbc/ops_wbc_robot/src/robot/: manipulator.cpp  math.cpp  parser.cpp  robot.cpp  tf_publisher.cpp
ops_wbc/ops_wbc_robot/test/: test.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
ops_wbc/ops_wbc_robot_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml~
ops_wbc/ops_wbc_robot_controller/cfg/: Param.cfg~
ops_wbc/ops_wbc_robot_controller/include/ops_wbc_robot_controller/: damping.hpp  effective_mass_matrix3d.hpp  friction_compensation.hpp  gravity_compensation.hpp  joint_control.hpp  joint_limit.hpp  orientation_control.hpp  param.hpp  param_base.hpp  position_control.hpp  task.hpp
ops_wbc/ops_wbc_robot_controller/src/: damping.cpp  effective_mass_matrix3d.cpp  friction_compensation.cpp  gravity_compensation.cpp  joint_control.cpp  joint_limit.cpp  orientation_control.cpp  param.cpp  position_control.cpp
ops_wbc/ops_wbc_utils/: CMakeLists.txt  CMakeLists.txt~  package.xml~
ops_wbc/ops_wbc_wrappers/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ops_wbc/ops_wbc_wrappers/include/: ops_wbc_wrappers.hpp
ops_wbc/ops_wbc_wrappers/include/ops_wbc_wrappers/: Labeling.h  Labeling_copy.h  camera.hpp  coordinate.hpp  display.hpp  exceptions.hpp  grid.hpp  hsv_mask.hpp  hsv_mask_param.hpp  image_subscriber.hpp  light.hpp  line.hpp  material.hpp  mouse.hpp  object.hpp  param.hpp  pipe.hpp  quaternion.hpp  rect.hpp  render.hpp  simple_object.hpp  utils.hpp  x_deformable_object.hpp  x_hand.hpp  x_left_hand.hpp  x_object.hpp  x_right_hand.hpp
ops_wbc/ops_wbc_wrappers/src/: camera.cpp  coordinate.cpp  display.cpp  grid.cpp  hsv_mask.cpp  image_subscriber.cpp  light.cpp  line.cpp  material.cpp  mouse.cpp  object.cpp  param.cpp  pipe.cpp  quaternion.cpp  rect.cpp  render.cpp  simple_object.cpp  utils.cpp  x_deformable_object.cpp  x_hand.cpp  x_left_hand.cpp  x_object.cpp  x_right_hand.cpp
ops_wbc/ops_wbc_wrappers/test/: cv_wrapper_test.cpp  gl_wrapper_test.cpp
policy_learning/policy_learning/: package.xml  package.xml~
ueye_cam/launch/: xs_bayer_rggb.launch  xs_bayer_rggb.launch~
usc_utils/usc_utilities/: CMakeLists.txt
vision_visp/visp_auto_tracker/: CMakeLists.txt  package.xml
wam/wam/: package.xml
wam/wam_dmp_controller/: CMakeLists.txt  controller_plugin.xml~
(+240 files in other folders)
