<package>
  <name>ops_wbc_gazebo_interface</name>
  <version>1.0.0</version>
  <description>The ops_wbc_gazebo_interface package</description>
  <maintainer email="robot@todo.com">robot</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/ahl_gazebo_interface</url> -->
  <author email="robot@todo.com">robot</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ops_wbc_utils</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>  
  <build_depend>std_msgs</build_depend>

  <run_depend>ops_wbc_utils</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
